Bug 455327 - geolocation - support timeout position option. r=Olli.Pettay sr=bzbarsky